♻️ (Crawler): Used URI class instead of URL